@@ -1,3 +1,8 @@
+2007-03-02  Christian Persch  <chpe@svn.gnome.org>
+
+	* gconf/gconf.c: (utf8_make_valid), (gconf_key_check),
+	(gconf_valid_key): Make sure error strings are UTF-8. Bug #406251.
+
 2007-03-02  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* backends/xml-dir.c: Don't include xml-entry.h twice.
